Bug 783133:  Remove NS_ABORT_IF_FALSE that fires somewhat regularly, which happens in a case that is correctly handled.  r=mcmanus